Fix scrollbar design

--- a/public/css/description.css
+++ b/public/css/description.css
@@ -33,7 +33,11 @@
     border-radius: 10px;
     text-align: left;
     padding-left: 20px;
+    padding-right: 20px;
     margin-top: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
   
   .contents .right .list-box .postContentBox .writer{
@@ -43,6 +47,9 @@
     border: 1px solid var(--main-color);
     border-radius: 10px;
     margin-top: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
   
   .contents .right .list-box .postContentBox .date{
@@ -52,15 +59,48 @@
     border: 1px solid var(--main-color);
     border-radius: 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
   
   .contents .right .list-box .postContentBox .description{
     width: 100%;
+    max-height: 850px;
+    overflow-y: scroll;
     background: white;
     border: 1px solid var(--main-color);
     border-radius: 10px;
     padding: 10px;
     text-align: left;
-    padding-left: 20px;
-    margin-top: 10px;
+  }
+  
+  .contents .right .list-box .postContentBox .description::-webkit-scrollbar{
+    width: 10px;
+  }
+
+  .contents .right .list-box .postContentBox .description::-webkit-scrollbar-thumb{
+    background: rgb(141, 174, 106);
+    border-radius: 10px;
+  }
+  .contents .right .list-box .postContentBox .description::-webkit-scrollbar-track{
+    background: white;
+    border-radius: 10px;
+  }
+
+  @media (max-width: 992px) {
+    .contents .right .list-box {
+      flex-direction: column;
+      align-items: center;
+      justify-content: start;
+    }
+    .contents .right .list-box .list-group {
+      top: 0px;
+      margin-top: 50px;
+      margin-bottom: 50px;
+    }
+    .contents .right .list-box {
+      width: 100%;
+    }
   }
